[gd_scene load_steps=3 format=2]

[ext_resource path="res://main_menu.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PanelHost" type="Panel" parent="."]
margin_top = 160.0
margin_right = 290.0
margin_bottom = 350.0

[node name="Label" type="Label" parent="PanelHost"]
margin_left = 100.0
margin_top = 14.0
margin_right = 185.0
margin_bottom = 28.0
text = "Create Server"

[node name="Label2" type="Label" parent="PanelHost"]
margin_left = 28.0
margin_top = 40.0
margin_right = 110.0
margin_bottom = 54.0
text = "Server Name"

[node name="txtServerName" type="LineEdit" parent="PanelHost"]
margin_left = 28.0
margin_top = 60.0
margin_right = 270.0
margin_bottom = 84.0

[node name="Label3" type="Label" parent="PanelHost"]
margin_left = 28.0
margin_top = 100.0
margin_right = 68.0
margin_bottom = 114.0
text = "Port"

[node name="txtServerPort" type="LineEdit" parent="PanelHost"]
margin_left = 20.0
margin_top = 120.0
margin_right = 78.0
margin_bottom = 144.0
text = "4546"

[node name="Label4" type="Label" parent="PanelHost"]
margin_left = 110.0
margin_top = 100.0
margin_right = 139.0
margin_bottom = 114.0
text = "Max connections:"

[node name="txtMaxPlayers" type="SpinBox" parent="PanelHost"]
margin_left = 114.0
margin_top = 120.0
margin_right = 188.0
margin_bottom = 144.0
min_value = 2.0
max_value = 16.0
value = 6.0

[node name="btCreate" type="Button" parent="PanelHost"]
margin_left = 110.0
margin_top = 160.0
margin_right = 163.0
margin_bottom = 180.0
text = "Create"

[node name="PanelJoin" type="Panel" parent="."]
margin_top = 360.0
margin_right = 290.0
margin_bottom = 550.0

[node name="Label" type="Label" parent="PanelJoin"]
margin_left = 114.0
margin_top = 14.0
margin_right = 181.0
margin_bottom = 28.0
text = "Join Server"

[node name="Label2" type="Label" parent="PanelJoin"]
margin_left = 28.0
margin_top = 80.0
margin_right = 68.0
margin_bottom = 94.0
text = "IP"

[node name="txtJoinIP" type="LineEdit" parent="PanelJoin"]
margin_left = 20.0
margin_top = 100.0
margin_right = 135.0
margin_bottom = 124.0
text = "127.0.0.1"

[node name="Label3" type="Label" parent="PanelJoin"]
margin_left = 180.0
margin_top = 80.0
margin_right = 220.0
margin_bottom = 94.0
text = "Port"

[node name="txtJoinPort" type="LineEdit" parent="PanelJoin"]
margin_left = 172.0
margin_top = 98.0
margin_right = 230.0
margin_bottom = 122.0
text = "4546"

[node name="btJoin" type="Button" parent="PanelJoin"]
margin_left = 120.0
margin_top = 150.0
margin_right = 155.0
margin_bottom = 170.0
text = "Join"

[node name="PanelPlayer" type="Panel" parent="."]
editor/display_folded = true
margin_right = 290.0
margin_bottom = 150.0

[node name="Label" type="Label" parent="PanelPlayer"]
margin_left = 31.0
margin_top = 14.0
margin_right = 114.0
margin_bottom = 28.0
text = "Player name:"

[node name="txtPlayerName" type="LineEdit" parent="PanelPlayer"]
margin_left = 11.0
margin_top = 30.0
margin_right = 270.0
margin_bottom = 54.0

[node name="Label2" type="Label" parent="PanelPlayer"]
margin_left = 90.0
margin_top = 75.0
margin_right = 130.0
margin_bottom = 89.0
text = "Colour:"

[node name="PlayerIcon" type="Sprite" parent="PanelPlayer"]
position = Vector2( 43, 100 )
texture = ExtResource( 2 )

[node name="btColor" type="ColorPickerButton" parent="PanelPlayer"]
margin_left = 89.0
margin_top = 90.0
margin_right = 148.0
margin_bottom = 115.0
color = Color( 1, 1, 1, 1 )

[node name="btDefaultColor" type="Button" parent="PanelPlayer"]
margin_left = 89.0
margin_top = 115.0
margin_right = 147.0
margin_bottom = 135.0
text = "Default"
[connection signal="pressed" from="PanelHost/btCreate" to="." method="_on_btCreate_pressed"]
[connection signal="pressed" from="PanelJoin/btJoin" to="." method="_on_btJoin_pressed"]
